--- a/PortIn/PortIn.csproj
+++ b/PortIn/PortIn.csproj
@@ -62,19 +62,24 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="PortInNotification.svc" />
+    <Content Include="ManageportingPort.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataContracts\ResponseCode.cs" />
-    <Compile Include="IPortInNotification.cs" />
-    <Compile Include="PortInNotification.svc.cs">
-      <DependentUpon>PortInNotification.svc</DependentUpon>
-    </Compile>
-    <Compile Include="DataContracts\PortingDonor.cs" />
-    <Compile Include="DataContracts\PortingResult.cs" />
-    <Compile Include="DataContracts\PortInNotification.cs" />
+    <Compile Include="DataContracts\ConnectService.cs" />
+    <Compile Include="DataContracts\ConnectServiceResponse.cs" />
+    <Compile Include="DataContracts\ExtendedResponse.cs" />
+    <Compile Include="DataContracts\PortingReferenceID.cs" />
+    <Compile Include="DataContracts\PortingRequestID.cs" />
     <Compile Include="DataContracts\ProductServiceID.cs" />
+    <Compile Include="DataContracts\SDPServiceHeaders.cs" />
+    <Compile Include="DataContracts\SDPSeverity.cs" />
+    <Compile Include="DataContracts\SDPStatusFault.cs" />
+    <Compile Include="DataContracts\SDPStatusLine.cs" />
+    <Compile Include="IManageportingPort.cs" />
+    <Compile Include="ManageportingPort.svc.cs">
+      <DependentUpon>ManageportingPort.svc</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
