--- a/PortIn/PortIn.csproj
+++ b/PortIn/PortIn.csproj
@@ -70,6 +70,9 @@
     <Compile Include="DataContracts\ConnectService.cs" />
     <Compile Include="DataContracts\ConnectServiceResponse.cs" />
     <Compile Include="DataContracts\ExtendedResponse.cs" />
+    <Compile Include="DataContracts\IndividualPorting.cs" />
+    <Compile Include="DataContracts\OrganizationPorting.cs" />
+    <Compile Include="DataContracts\PortingDetailsSN.cs" />
     <Compile Include="DataContracts\PortingDonor.cs" />
     <Compile Include="DataContracts\PortingReferenceID.cs" />
     <Compile Include="DataContracts\PortingRequestID.cs" />
@@ -77,12 +80,17 @@
     <Compile Include="DataContracts\PortInNotification.cs" />
     <Compile Include="DataContracts\PortInNotificationResponse.cs" />
     <Compile Include="DataContracts\PortInNotificationResultCode.cs" />
+    <Compile Include="DataContracts\PortOutDetailsSN.cs" />
     <Compile Include="DataContracts\ProductServiceID.cs" />
     <Compile Include="DataContracts\SDPServiceHeaders.cs" />
     <Compile Include="DataContracts\SDPServiceResponseHeaders.cs" />
     <Compile Include="DataContracts\SDPSeverity.cs" />
     <Compile Include="DataContracts\SDPStatusFault.cs" />
     <Compile Include="DataContracts\SDPStatusLine.cs" />
+    <Compile Include="DataContracts\ValidatePortOut.cs" />
+    <Compile Include="DataContracts\ValidatePortOutInternal.cs" />
+    <Compile Include="DataContracts\ValidatePortOutInternalResponse.cs" />
+    <Compile Include="DataContracts\ValidatePortOutResponse.cs" />
     <Compile Include="IManageportingPort.cs" />
     <Compile Include="ManageportingPort.svc.cs">
       <DependentUpon>ManageportingPort.svc</DependentUpon>
@@ -93,18 +101,6 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="sdp_singtel_core_v1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="sdp_singtel_customerproduct_common_v1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="sdp_singtel_service_common.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="sdp_singtel_service_manage_porting_v1.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
